Fixed all JavaDoc errors complaint by Java 1.8.0_60